Social_book_Complete

--- a/register/templates/index.html
+++ b/register/templates/index.html
@@ -157,13 +157,16 @@
 						<span class="user-icon">
 							<img src="/static/vendors/images/photo1.jpg" alt="">
 						</span>
-						<span class="user-name">{{username}}</span>
+						<span class="user-name">Shray</span>
 					</a>
 					<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
 						<a class="dropdown-item" href="profile.html"><i class="dw dw-user1"></i> Profile</a>
 						<a class="dropdown-item" href="profile.html"><i class="dw dw-settings2"></i> Setting</a>
 						<a class="dropdown-item" href="faq.html"><i class="dw dw-help"></i> Help</a>
 						<a class="dropdown-item" href="login.html"><i class="dw dw-logout"></i> Log Out</a>
+						<a class="dropdown-item" href="{% url 'upload_books' %}"><i></i>Upload Files</a>
+						<a class="dropdown-item" href="{% url 'books' %}"><i></i>View Uploaded Files</a>
+
 					</div>
 				</div>
 			</div>
