--- a/register/templates/login1.html
+++ b/register/templates/login1.html
@@ -61,7 +61,7 @@
 							<div class="select-role">
 							</div>
 							<div class="input-group custom">
-								<input type="text" class="form-control form-control-lg" placeholder="Username" name="username">
+								<input type="text" class="form-control form-control-lg" placeholder="email" name="email">
 								<div class="input-group-append custom">
 									<span class="input-group-text"><i class="icon-copy dw dw-user1"></i></span>
 								</div>
