--- a/register/templates/login.html
+++ b/register/templates/login.html
@@ -22,8 +22,8 @@
     <form method="post">
         <h3>Login Here</h3>
         {% csrf_token %} 
-        <label for="username">Username</label>
-        <input type="text" placeholder="Enter Username" id="username" name="username">
+        <label for="username">Email</label>
+        <input type="text" placeholder="Enter Username" id="email" name="email">
 
         <label for="password">Password</label>
         <input type="password" placeholder="Password" id="password" name="pass">
