--- a/register/templates/register.html
+++ b/register/templates/register.html
@@ -70,12 +70,12 @@
 												<input type="email" class="form-control" name="email">
 											</div>
 										</div>
-										<div class="form-group row">
+										{% comment %} <div class="form-group row">
 											<label class="col-sm-4 col-form-label">Username*</label>
 											<div class="col-sm-8">
 												<input type="text" class="form-control" name="username">
 											</div>
-										</div>
+										</div> {% endcomment %}
 										<div class="form-group row">
 											<label class="col-sm-4 col-form-label">Password*</label>
 											<div class="col-sm-8">
@@ -87,6 +87,32 @@
 											<div class="col-sm-8">
 												<input type="password" class="form-control" name="password2">
 											</div>
+										</div>
+										<div class="form-group row">
+											<label class="col-sm-4 col-form-label">Date of Birth*</label>
+											<div class="col-sm-8">
+												<input type="date" class="form-control" name="birthdate">
+											</div>
+										</div>
+										<div class="form-group row">
+											<label class="col-sm-4 col-form-label">Address*</label>
+											<div class="col-sm-8">
+												<input type="text" class="form-control" name="Address">
+											</div>
+										</div>
+										<div class="form-group row">
+											<label class="col-sm-4 col-form-label">Phone Number*</label>
+											<div class="col-sm-8">
+												<input type="Number" class="form-control" name="Phone_Number">
+											</div>
+										</div>
+										<div class="form-group row">
+											<label class="col-sm-4 col-form-label">Public_Visibility</label>
+											<div class="col-sm-3">
+												<input type="radio" class="form-control" name="public_visibility" value="True">Yes
+												<input type="radio" class="form-control" name="public_visibility" value="False">No
+											</div>
+										</div>
 										</div>
 										<div class="form-group row">
 											<button type="submit">Register</button>
